--- a/index.html
+++ b/index.html
@@ -5,155 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jacob Cruz RP Game</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 10px 20px;
-            text-align: center;
-        }
-        .container {
-            padding: 20px;
-        }
-        .stats {
-            background: #fff;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 15px;
-            margin-bottom: 20px;
-        }
-        .stats p {
-            margin: 5px 0;
-        }
-        .scene {
-            background: #fff;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 15px;
-            margin-bottom: 20px;
-        }
-        .input-section {
-            margin-top: 20px;
-        }
-        input[type="text"] {
-            width: 80%;
-            padding: 10px;
-            margin-right: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        button {
-            padding: 10px 15px;
-            background: #333;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        button:hover {
-            background: #555;
-        }
+        body { font-family: Arial, sans-serif; background-color: #f0f0f0; color: #333; margin: 0; padding: 0; }
+        header { background: #333; color: #fff; padding: 10px 20px; text-align: center; }
+        .container { padding: 20px; }
+        .stats, .scene { background: #fff; border: 1px solid #ccc; border-radius: 5px; padding: 15px; margin-bottom: 20px; }
+        .input-section { margin-top: 20px; }
+        input[type="text"] { width: 80%; padding: 10px; margin-right: 10px; border: 1px solid #ccc; border-radius: 5px; }
+        button { padding: 10px 15px; background: #333; color: #fff; border: none; border-radius: 5px; cursor: pointer; }
+        button:hover { background: #555; }
     </style>
 </head>
 <body>
-<header>
-    <h1>Jacob Cruz RP Game</h1>
-</header>
-<div class="container">
-    <div class="stats" id="stats">
-        <h3>Stats</h3>
-        <p><strong>Health:</strong> 100%</p>
-        <p><strong>Hunger:</strong> 0%</p>
-        <p><strong>Inventory:</strong> None</p>
-        <p><strong>Money:</strong> $100</p>
-        <p><strong>Wearing:</strong> T-shirt and jeans</p>
-        <p><strong>Date and Time:</strong> Saturday, 10:00 AM</p>
-    </div>
-
-    <div class="scene" id="scene">
-        <p>You’re sitting on the sofa in the living room watching Mr. Bean. The house is lively as your mom washes dishes in the kitchen, your dad sips coffee nearby, and your siblings are all busy with their activities.</p>
-        <ul>
-            <li>Emily is upstairs doing her homework.</li>
-            <li>Ash and Daniel are trying to do backflips in their room.</li>
-        </ul>
-    </div>
-
-    <div class="input-section">
-        <input type="text" id="action" placeholder="Type your action here...">
-        <button onclick="processAction()">Submit</button>
-    </div>
-</div>
-
-<script>
-    let stats = {
-        health: 100,
-        hunger: 0,
-        inventory: [],
-        money: 100,
-        wearing: "T-shirt and jeans",
-        dateTime: "Saturday, 10:00 AM"
-    };
-
-    let sceneDescription = "You’re sitting on the sofa in the living room watching Mr. Bean. The house is lively as your mom washes dishes in the kitchen, your dad sips coffee nearby, and your siblings are all busy with their activities.";
-
-    function updateStats(newStats) {
-        stats = { ...stats, ...newStats };
-        document.getElementById("stats").innerHTML = `
+    <header>
+        <h1>Jacob Cruz RP Game</h1>
+    </header>
+    <div class="container">
+        <div class="stats" id="stats">
             <h3>Stats</h3>
-            <p><strong>Health:</strong> ${stats.health}%</p>
-            <p><strong>Hunger:</strong> ${stats.hunger}%</p>
-            <p><strong>Inventory:</strong> ${stats.inventory.length ? stats.inventory.join(", ") : "None"}</p>
-            <p><strong>Money:</strong> $${stats.money}</p>
-            <p><strong>Wearing:</strong> ${stats.wearing}</p>
-            <p><strong>Date and Time:</strong> ${stats.dateTime}</p>
-        `;
-    }
+            <p><strong>Health:</strong> 100%</p>
+            <p><strong>Hunger:</strong> 0%</p>
+            <p><strong>Inventory:</strong> None</p>
+            <p><strong>Money:</strong> $100</p>
+            <p><strong>Wearing:</strong> T-shirt and jeans</p>
+            <p><strong>Date and Time:</strong> Saturday, 10:00 AM</p>
+        </div>
 
-    function updateScene(newDescription) {
-        sceneDescription = newDescription;
-        document.getElementById("scene").innerHTML = `<p>${sceneDescription}</p>`;
-    }
+        <div class="scene" id="scene">
+            <p>You’re sitting on the sofa in the living room watching Mr. Bean. The house is lively as your mom washes dishes in the kitchen, your dad sips coffee nearby, and your siblings are all busy with their activities.</p>
+            <ul>
+                <li>Emily is upstairs doing her homework.</li>
+                <li>Ash and Daniel are trying to do backflips in their room.</li>
+            </ul>
+        </div>
 
-    function processAction() {
-        const action = document.getElementById("action").value.trim();
-        if (!action) return;
+        <div class="input-section">
+            <input type="text" id="action" placeholder="Type your action here...">
+            <button onclick="processAction()">Submit</button>
+        </div>
+    </div>
 
-        let response = "";
-        switch (action.toLowerCase()) {
-            case "*go to the kitchen*":
-                response = "You walk into the kitchen. Mom is focused on the dishes, and Dad looks up briefly from his coffee.";
-                updateScene(response);
-                break;
-            case "*check on ash and daniel*":
-                response = "You head to Ash and Daniel's room. They're sweating as they fail to land another backflip. 'Hey, Jacob,' Daniel says, brushing his hair back.";
-                updateScene(response);
-                break;
-            case "*grab a snack*":
-                if (stats.hunger >= 20) {
-                    stats.hunger -= 20;
-                    response = "You grab an apple from the kitchen counter. It tastes fresh and helps your hunger.";
-                } else {
-                    response = "You're not really hungry right now.";
-                }
-                updateScene(response);
-                updateStats({ hunger: stats.hunger });
-                break;
-            default:
-                response = "You stand still, unsure what to do next.";
-                updateScene(response);
-                break;
+    <script>
+        const hfToken = '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'; // Use your actual Hugging Face token here
+
+        async function processAction() {
+            const action = document.getElementById("action").value.trim();
+            if (!action) return;
+
+            const messages = [
+                { role: "system", content: "You are an assistant in a role-playing game." },
+                { role: "user", content: action }
+            ];
+
+            const response = await fetch("https://api-inference.huggingface.co/models/Qwen/QwQ-32B-Preview", {
+                method: "POST",
+                headers: {
+                    "Authorization": `Bearer ${hfToken}`,
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({ inputs: messages })
+            });
+
+            const data = await response.json();
+            const aiResponse = data.generated_text || "I didn't understand that. Try again!";
+            updateScene(aiResponse);
+            document.getElementById("action").value = "";
         }
 
-        document.getElementById("action").value = "";
-    }
-
-    updateStats(stats);
-</script>
+        function updateScene(newDescription) {
+            document.getElementById("scene").innerHTML = `<p>${newDescription}</p>`;
+        }
+    </script>
 </body>
 </html>
